--- a/index-en.html
+++ b/index-en.html
@@ -278,7 +278,7 @@
                         <div class="box">
                             <div class="icon"><img src="img/Diseno.png" loading="lazy" style="width: 40px" alt="">
                             </div>
-                            <h4 class="title"><a href="#servicios">Diseño</a></h4>
+                            <h4 class="title"><a href="#servicios">Design</a></h4>
                             <p class="description">Design
                                 Logos and Branding.
                             </p>
@@ -623,7 +623,7 @@
         <section id="testimonial">
             <div class="container" align="justify-content-center">
                 <div class="section-header">
-                    <h3>Their opinion about us</h3>
+                    <h3>THEIR OPINION ABOUT US</h3>
                     <p><br></p>
                 </div>
 
