--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="intro-info">
                 <h2 style="color:black">Design 4 All</h2>
                 <div>
-                    <a href="#agencia" class="btn-services scrollto">Conocenos</a>
+                    <a href="#agencia" class="btn-services scrollto">Conócenos</a>
                 </div>
             </div>
 
@@ -286,7 +286,7 @@
                                     style="width: 40px" alt="">
                             </div>
                             <h4 class="title"><a href="#servicios">Estudios de Competencia</a></h4>
-                            <p class="description">Análisis web, pauta y comunicaciones<br /></p>
+                            <p class="description">Análisis web, pauta y comunicaciones.<br /></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-5  wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
